# ServerSolve

./: AStar.h  Astar.cpp  Astar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFS.cpp  DFS.h  EnumDirection.h  FileCacheManager.cpp  FileCacheManager.h  FilesGenerator.h  HillClimbing.cpp  HillClimbing.h  Main.cpp  MatrixSearchable.cpp  MatrixSearchable.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.h  PriorityQueue.h  README.md  ReverserSolver.cpp  ReverserSolver.h  Searchable.h  Searcher.h  SearcherSolver.h  Server.h  (+9 more)
